--- a/vercel.json
+++ b/vercel.json
@@ -2,8 +2,6 @@
   "version": 2,
   "builds": [
     { "src": "frontend/package.json", "use": "@vercel/next" },
-    { "src": "api/upload.py",          "use": "@vercel/python" },
-    { "src": "api/chat.py",            "use": "@vercel/python" },
-    { "src": "api/health.py",          "use": "@vercel/python" }
+    { "src": "api/*.py",            "use": "@vercel/python" }
   ]
 }
