--- a/vercel.json
+++ b/vercel.json
@@ -1,27 +1,23 @@
 {
   "version": 2,
   "builds": [
-    { "src": "frontend/package.json", "use": "@vercel/next" },
-    { "src": "api/upload.py",          "use": "@vercel/python" },
-    { "src": "api/chat.py",            "use": "@vercel/python" },
-    { "src": "api/health.py",          "use": "@vercel/python" }
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
+    },
+    {
+      "src": "frontend/package.json",
+      "use": "@vercel/next"
+    }
   ],
   "routes": [
     {
-      "src": "^/api/upload/?$",
-      "dest": "api/upload.py"
+      "src": "/api/(.*)",
+      "dest": "api/index.py"
     },
-    {
-      "src": "^/api/chat/?$",
-      "dest": "api/chat.py"
-    },
-    {
-      "src": "^/api/health/?$",
-      "dest": "api/health.py"
-    },
-    {
-      "src": "^/(.*)$",
-      "dest": "frontend/$1"
-    }
+    { 
+        "src": "/(.*)", 
+        "dest": "frontend/$1"
+      }
   ]
 }
