--- a/vercel.json
+++ b/vercel.json
@@ -2,22 +2,18 @@
   "version": 2,
   "builds": [
     {
-      "src": "api/index.py",
-      "use": "@vercel/python"
-    },
-    {
       "src": "frontend/package.json",
       "use": "@vercel/next"
+    },
+    {
+      "src": "api/index.py",
+      "use": "@vercel/python"
     }
   ],
-  "routes": [
+  "rewrites": [
     {
-      "src": "/api/(.*)",
-      "dest": "api/index.py"
-    },
-    { 
-        "src": "/(.*)", 
-        "dest": "frontend/$1"
-      }
+      "source": "/api/(.*)",
+      "destination": "/api/index.py"
+    }
   ]
 }
