refactor: restructure project for unified dev/deployment

--- a/package.json
+++ b/package.json
@@ -1,5 +1,18 @@
 {
-  "name": "hoabud-monorepo",
+  "name": "hoabud",
+  "version": "1.0.0",
   "private": true,
-  "version": "1.0.0"
+  "scripts": {
+    "dev": "concurrently \"npm:next-dev\" \"npm:fastapi-dev\"",
+    "next-dev": "next dev",
+    "fastapi-dev": "python3 -m uvicorn api.index:app --reload",
+    "build": "next build",
+    "start": "next start"
+  },
+  "dependencies": {
+    "concurrently": "^8.2.2",
+    "next": "^13.4.6",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
+  }
 }
